--- a/forgot-password.html
+++ b/forgot-password.html
@@ -186,14 +186,22 @@
         <!-- 這裡放置頁面內容 -->
         <div class="forgot-password-container">
             <h2 class="form-title">忘記密碼</h2>
-            <form id="forgotPasswordForm">
+            <form id="forgotPasswordForm" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="account" class="form-label">帳號</label>
-                    <input type="text" class="form-control" id="account" required>
+                    <input type="text" class="form-control" id="account" name="account"
+                        pattern="^[a-zA-Z][a-zA-Z0-9_]{3,19}$" required>
+                    <div class="invalid-feedback">
+                        帳號須以字母開頭，只能包含字母、數字和底線，長度4-20字元
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">電子郵件</label>
-                    <input type="email" class="form-control" id="email" required>
+                    <input type="email" class="form-control" id="email" name="email"
+                        pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" required>
+                    <div class="invalid-feedback">
+                        請輸入有效的電子郵件地址
+                    </div>
                 </div>
                 <div class="btn-container">
                     <button type="submit" class="btn btn-primary" id="submitBtn">
@@ -204,10 +212,10 @@
                     <span class="countdown" id="countdown"></span>
                 </div>
             </form>
-            <div class="alert alert-success" id="successAlert">
+            <div class="alert alert-success" id="successAlert" style="display: none;">
                 重置密碼連結已發送至您的信箱，請查收。
             </div>
-            <div class="alert alert-danger" id="errorAlert">
+            <div class="alert alert-danger" id="errorAlert" style="display: none;">
                 發送失敗，請確認帳號和信箱是否正確。
             </div>
         </div>
@@ -221,10 +229,10 @@
 
     <!-- JavaScript -->
     <script>
+        // 等待 DOM 完全加載
         $(document).ready(function () {
-            // 檢查登入狀態
+            // 初始化功能
             checkLoginStatus();
-            // 初始化時更新購物車數量
             updateCartBadge();
 
             // 檢查登入狀態
@@ -241,6 +249,20 @@
                     $('#loginLink').removeClass('d-none');
                     $('#userMenu').addClass('d-none');
                 }
+            }
+
+            // 更新購物車數量標籤
+            function updateCartBadge() {
+                fetch(`${BASE_URL}/api/cart`, {
+                    credentials: 'include'
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        $('#cartBadge').text(data.pcs);
+                    })
+                    .catch(error => {
+                        console.error('獲取購物車資訊錯誤:', error);
+                    });
             }
 
             // 處理登出
@@ -265,20 +287,7 @@
                     });
             });
 
-            // 更新購物車數量標籤
-            function updateCartBadge() {
-                fetch(`${BASE_URL}/api/cart`, {
-                    credentials: 'include'
-                })
-                    .then(response => response.json())
-                    .then(data => {
-                        $('#cartBadge').text(data.pcs);
-                    })
-                    .catch(error => {
-                        console.error('獲取購物車資訊錯誤:', error);
-                    });
-            }
-
+            // 倒數計時功能
             function startCountdown(button, duration) {
                 // 禁用按鈕
                 button.prop('disabled', true);
@@ -306,19 +315,77 @@
                     }
                 }, 1000);
             }
-            // 新增忘記密碼相關的程式碼
-            $('#forgotPasswordForm').on('submit', function (e) {
+
+            // 表單驗證和處理
+            const form = $('#forgotPasswordForm');
+
+            // 即時驗證帳號
+            $('#account').on('input', function () {
+                const accountPattern = /^[a-zA-Z][a-zA-Z0-9_]{3,19}$/;
+                const isValid = accountPattern.test(this.value);
+
+                if (this.value) {
+                    if (!isValid) {
+                        this.classList.add('is-invalid');
+                        this.classList.remove('is-valid');
+                    } else {
+                        this.classList.add('is-valid');
+                        this.classList.remove('is-invalid');
+                    }
+                } else {
+                    this.classList.remove('is-valid', 'is-invalid');
+                }
+            });
+
+            // 即時驗證 Email
+            $('#email').on('input', function () {
+                const emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+                const isValid = emailPattern.test(this.value);
+
+                if (this.value) {
+                    if (!isValid) {
+                        this.classList.add('is-invalid');
+                        this.classList.remove('is-valid');
+                    } else {
+                        this.classList.add('is-valid');
+                        this.classList.remove('is-invalid');
+                    }
+                } else {
+                    this.classList.remove('is-valid', 'is-invalid');
+                }
+            });
+
+            // 表單提交處理
+            form.on('submit', function (e) {
                 e.preventDefault();
 
-                const submitBtn = $('#submitBtn');
-                const account = $('#account').val();
-                const email = $('#email').val();
+                const account = $('#account');
+                const email = $('#email');
+                let isValid = true;
 
-                // 檢查表單欄位是否為空
-                if (!account || !email) {
-                    $('#errorAlert').text('請填寫所有欄位').fadeIn();
+                // 驗證帳號
+                const accountPattern = /^[a-zA-Z][a-zA-Z0-9_]{3,19}$/;
+                if (!account.val() || !accountPattern.test(account.val())) {
+                    account.addClass('is-invalid');
+                    isValid = false;
+                } else {
+                    account.removeClass('is-invalid');
+                }
+
+                // 驗證 Email
+                const emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+                if (!email.val() || !emailPattern.test(email.val())) {
+                    email.addClass('is-invalid');
+                    isValid = false;
+                } else {
+                    email.removeClass('is-invalid');
+                }
+
+                if (!isValid) {
                     return;
                 }
+
+                const submitBtn = $('#submitBtn');
 
                 // 發送重置密碼請求
                 fetch(`${BASE_URL}/api/members/forgot-password`, {
@@ -327,8 +394,8 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        account: account,
-                        email: email
+                        account: account.val(),
+                        email: email.val()
                     })
                 })
                     .then(response => response.json())
@@ -336,18 +403,18 @@
                         if (data.success) {
                             $('#successAlert').fadeIn();
                             $('#errorAlert').hide();
-                            // 清空表單
-                            $('#forgotPasswordForm')[0].reset();
-                            // 開始倒數計時
+                            form[0].reset();
+                            // 重置驗證狀態
+                            $('.form-control').removeClass('is-valid is-invalid');
                             startCountdown(submitBtn, 60);
                         } else {
-                            $('#errorAlert').fadeIn();
+                            $('#errorAlert').text(data.message || '發送失敗，請確認帳號和信箱是否正確。').fadeIn();
                             $('#successAlert').hide();
                         }
                     })
                     .catch(error => {
                         console.error('Error:', error);
-                        $('#errorAlert').fadeIn();
+                        $('#errorAlert').text('系統錯誤，請稍後再試。').fadeIn();
                         $('#successAlert').hide();
                     });
             });
